# LEAP_sprayer

./: .gitignore  ARCHITECTURE.md  README.md  detection.launch.py  launch_system.py  pixi.toml  ruff.toml
firmware/solenoid_controller/: platformio.ini
firmware/solenoid_controller/src/: solenoidctrl_pwm.cpp
firmware/solenoid_controller_live/: platformio.ini
firmware/solenoid_controller_live/src/: main.cpp
firmware/solenoid_controller_test_led/: solenoid_controller_test_led.ino
firmware/solenoid_controller_test_led/src/: main.cpp
src/bringup/: package.xml  setup.py
src/bringup/config/: realsense_config.yaml
src/bringup/launch/: launch.py
src/camera/: package.xml  setup.py
src/camera/camera/: debug_camera.py
src/camera/test/: test_flake8.py
src/detect/: package.xml  setup.py
src/detect/detect/: debug_visualizer.py  owl_segmenter.py
src/foxglove_compat/: package.xml  setup.cfg  setup.py
src/foxglove_compat/foxglove_compat/: detection2D_visualizer.py  detections2D_visualizer.py  detections3D_visualizer.py
src/project/: package.xml  setup.py
src/projection/: package.xml  setup.py
src/projection/projection/: basic_projection.py
src/spray_serialctrl/: package.xml  setup.cfg  setup.py
src/spray_serialctrl/spray_serialctrl/: debug_serialcontroller.py  dispatcher.py  serialcontroller.py  subscriber_member_function.py  tf_dispatcher.py
src/sprayer_description/: CMakeLists.txt  README.md  package.xml
src/sprayer_description/launch/: boom_assembly_with_mounts.launch  sprayer_description.launch.py
src/tracking/: package.xml  setup.py
(+5 files in other folders)
