<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>Launch and config for weed sprayer stack</description>
  <maintainer email="evanfost@andrew.cmu.edu">Evan</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>camera</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>detect</exec_depend>
  <exec_depend>projection</exec_depend>
  <exec_depend>foxglove_compat</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
